<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorSurface"
    android:orientation="vertical"
    android:padding="8dp">

    <TextView
        android:id="@+id/tvnum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/hashtag"
        android:textColor="@color/colorDefaultText"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/txtNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginEnd="16dp"
        android:layout_toEndOf="@id/tvnum"
        android:text="@string/episode_number"
        android:textColor="@color/colorDefaultText"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/txtNumber"
        android:text="@string/episode_title"
        android:textColor="@color/colorDefaultText"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/txtReleased"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtTitle"
        android:layout_toEndOf="@id/txtNumber"
        android:text="@string/episode_released"
        android:textColor="@color/colorDefaultTextFaded"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/tvrat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:text="@string/imdb"
        android:textColor="@color/colorDefaultTextFaded"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/txtRating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvrat"
        android:layout_alignParentEnd="true"
        android:text="@string/episode_rating"
        android:textColor="@color/colorDefaultTextFaded"
        android:textSize="14sp" />

</RelativeLayout>